@@ -434,3 +434,4 @@ hacking/ChangeLog: the small scale changelog for libspectrum
 20070516 tape.c,tzx_read.c,test/{test.c,turbo-zeropilot.tzx}: don't produce
 	 a pilot if none present in TZX turbo block, and free a TZX turbo
 	 block with no data correctly (fixes bugs #1720238 and #1720270).
+20070518 tzx_write.c: add write support for TZX direct recording block (Fred).
